# afbackup

./: CONFIG.in  ChangeLog  ChangeLog.albiutils  DO-DONT  FAQ  HOWTO  INSTALL  INSTALL.albiutils  INSTALL.utilslib  INTRO  Install  LICENSE  Makefile.in  PROGRAMS  RCS  README  RELEASE_NOTES  UPGRADE  __descrpt.c  __inc_link  __mt  __numset.c  __packpats.c  __piper.c  __z.c  acconfig.h  af-lockfile.8  afbackup.h  afbackup.spec.3.3.1  afbackup.spec.egidy  afbackup.spec.in  afbackup.spec.rh  afbackup.spec.rtc  afbackup.sun.map  afclient.8.in  afclient.conf.8.in  afmserver.8.in  afpacker.h  afrestore.8.in  afserver.8.in  (+134 more)
debian/: NEWS  README.Debian  afbackup-client.cron.monthly  afbackup-client.dirs  afbackup-client.links  afbackup-client.manpages  afbackup-client.postinst  afbackup-client.postrm  afbackup-common.docs  afbackup-common.examples  afbackup.cron.monthly  afbackup.dirs  afbackup.links  afbackup.manpages  afbackup.postinst  afbackup.postrm  afbackup.preinst  changelog  control  copyright  cryptkey  rules  watch
debian.tmpl/: RCS  README  changelog  control  control-devel  control-doc  control-server  control.albiutils  docs  docs.albiutils  init.server  menu  menu.albiutils
debian/man/: __descrpt.8  __inc_link.8  __mt.8  __numset.8  __packpats.8  __piper.8  __z.8  autocptapes.8  cartagehandler.8  xafserverstatus.8
debian/patches/: 50-debian.diff  60-Makefile_do-not-remove-debian-folder.diff  series
intl/: Makefile.in  RCS  gnu.gmo  gnu.mo  libintl.h
po/: Makefile.in.in  POTFILES-sh  POTFILES-sh.in  POTFILES.in  RCS  afbackup.pot  de.po  it.po  xgettext-sh
